[gd_scene load_steps=8 format=3 uid="uid://cx5hexjn4ya0x"]

[ext_resource type="Script" uid="uid://d7pns16rwkqi" path="res://source/globals/transition.gd" id="1_o5nvp"]
[ext_resource type="Texture2D" uid="uid://d2nls78i134o2" path="res://assets/images/transition/transitionMaskUP.png" id="2_yvbah"]
[ext_resource type="Texture2D" uid="uid://c8locxn82kkw6" path="res://assets/images/transition/transitionMaskDOWN.png" id="3_woedm"]

[sub_resource type="Animation" id="Animation_cnc31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TransMaksDown:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 125)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TransMaksUp:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(641, 59)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -834)]
}

[sub_resource type="Animation" id="Animation_xrf44"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TransMaksDown:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, -3464.58), Vector2(640, -2021)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TransMaksUp:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 304.844), Vector2(640, 1748)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2383), Vector2(0, -982)]
}

[sub_resource type="Animation" id="Animation_ukd15"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TransMaksUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 1748), Vector2(640, 4413)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TransMaksDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, -2021), Vector2(640, 645)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -562), Vector2(0, 1935)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0mlii"]
_data = {
&"RESET": SubResource("Animation_cnc31"),
&"fade_in": SubResource("Animation_xrf44"),
&"fade_out": SubResource("Animation_ukd15")
}

[node name="Transition" type="CanvasLayer"]
layer = 6
script = ExtResource("1_o5nvp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="TransMaksUp" type="Sprite2D" parent="Control"]
modulate = Color(0, 0, 0, 1)
position = Vector2(641, 59)
scale = Vector2(1, 4.73733)
texture = ExtResource("2_yvbah")

[node name="TransMaksDown" type="Sprite2D" parent="Control"]
modulate = Color(0, 0, 0, 1)
position = Vector2(640, 125)
scale = Vector2(1, 5.73451)
texture = ExtResource("3_woedm")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_top = -2383.0
offset_right = 35.0
offset_bottom = -2308.0
scale = Vector2(36.5655, 21.8184)
color = Color(0, 0, 0, 1)

[node name="Fade_anim" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_0mlii")
}
speed_scale = 0.0

[node name="stickers" type="Sprite2D" parent="Control"]
metadata/_edit_lock_ = true

[connection signal="animation_finished" from="Control/Fade_anim" to="." method="_on_fade_anim_animation_finished"]
